k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-gateway

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ai-gateway

  template:
    metadata:
      labels:
        app: ai-gateway

    spec:
      containers:
        - name: gateway

          image: ai-gateway:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5

            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15

            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"
