k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-gateway

spec:
  selector:
    app: ai-gateway

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
